<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="5.0dip"
        android:text="@string/app_name"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="7.0dip"
        android:text="@string/splash_text1"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#ffaaaaaa" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="7.0dip"
        android:text="@string/splash_text2"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#ffaaaaaa" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="7.0dip"
        android:text="@string/splash_text3"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#ffaaaaaa" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:text="@string/your_operator1"
        android:textAppearance="?android:textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:text="@string/your_operator2"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@id/button1"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue"
        android:text="OK"
        android:textAppearance="?android:textAppearanceLarge" />

</LinearLayout>