<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:text="@string/comments_part1"
        android:textColor="#ffffffff"
        android:textSize="16.0dip" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView01"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:text="@string/comments_part2"
        android:textColor="#ffff4500"
        android:textSize="16.0dip" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView02"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:text="@string/comments_part3"
        android:textColor="#ffffffff"
        android:textSize="16.0dip" />

    <TextView
        android:id="@+id/hiperlink01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_alignStart="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="32dp"
        android:text="@string/comments"
        android:textSize="18.0dip" />

    <TextView
        android:id="@+id/hiperlink02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hiperlink01"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="15.0dip"
        android:text="@string/hyperlink2"
        android:textSize="18.0dip" />

    <Button
        android:id="@+id/Button02"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_blue"
        android:text="@string/comments"
        android:textSize="16dp" />

    <Button
        android:id="@+id/Button01"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_blue"
        android:text="@string/close_activity"
        android:textSize="16dp" />
</RelativeLayout>